force-app/main/default/objects/Quota_Adjustment_Batch__c/Quota_Adjustment_Batch__c.object-meta.xml
<CustomObject>
    <description>Represents a batch operation to adjust quotas across multiple participants based on defined scope and criteria.</description>
    <label>Quota Adjustment Batch</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Quota Adjustment Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Adjustment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>