force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>Type of adjustment to apply to quotas.</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat_Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>New_Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>