force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value__c</fullName>
    <description>Numeric value of the adjustment to apply.</description>
    <label>Adjustment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>