force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>User who approved the quota adjustment batch.</description>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quota Adjustments</relationshipLabel>
    <relationshipName>Quota_Adjustments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>