force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Executed_On__c.field-meta.xml
<CustomField>
    <fullName>Executed_On__c</fullName>
    <description>Date and time the batch adjustment was executed.</description>
    <label>Executed On</label>
    <type>DateTime</type>
</CustomField>