force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Periods_Affected__c.field-meta.xml
<CustomField>
    <fullName>Periods_Affected__c</fullName>
    <description>Which periods the quota adjustment applies to.</description>
    <label>Periods Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current_Period</fullName>
            </value>
            <value>
                <fullName>Remaining_Periods</fullName>
            </value>
            <value>
                <fullName>All_FY_Periods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>