force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Justification for the quota adjustment.</description>
    <label>Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>