force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Records_Affected__c.field-meta.xml
<CustomField>
    <fullName>Records_Affected__c</fullName>
    <description>Number of quota records affected by this batch adjustment.</description>
    <label>Records Affected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>