force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Scope_Filter__c.field-meta.xml
<CustomField>
    <fullName>Scope_Filter__c</fullName>
    <description>Filter criteria to narrow the scope of the adjustment.</description>
    <label>Scope Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>