force-app/main/default/objects/Quota_Adjustment_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the quota adjustment batch.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending_Approval</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Rolled_Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>